* January 15 2013 John Evans <john.g.evans.ne@gmail.com> -r4033
- Fixed a bad warning on NC_GETVARINFO when java IDs being used.
- Fixed indexing issue for string data retrieved by java backend
-     (thanks to Brendan DeTracey).
- Fixed issue with grib files when intra-element ordering is to be preserved.
- Updated README for OPeNDAP string issue.

* November 27 2012 John Evans <john.g.evans.ne@gmail.com> -r4028
- SQUEEZE call sites removed.  NC_VARGET will try to restore any leading
- singleton dimensions that were removed because of the 
- row-major-col-major order issue.  Forcing integer COUNT argument in 
- private/snc_get_indexing, suggested by Gerben de Boer.

* October 30 2012 John Evans <john.g.evans.ne@gmail.com> -r4024
- Fixed indexing bug that crept into java backend.

* October 10 2012 John Evans <john.g.evans.ne@gmail.com> -r4020
- Added THREDDS_DUMP and THREDDS_INFO to top-level.
- Fixed bugs in OPeNDAP string handling.

* September 29 2012 John Evans <john.g.evans.ne@gmail.com> -r4015
- Fixed bug in netcdf-java backend where a file on the matlab path 
- wouldn't be read.
- Added debug code to force use of netcdf-java for all reading.
- Minor test modifications.

* September 25 2012 John Evans <john.g.evans.ne@gmail.com> -r4009
- Fixed minor testing bug.

* September 22 2012 John Evans <john.g.evans.ne@gmail.com> -r4007
- Not erroring out on zero-size variables.

* September 14 2012 John Evans <john.g.evans.ne@gmail.com> -r4005
- No longer testing SNC2MAT or HDF4 writes.
- Crosslinked NC_ISVAR, NC_ISDIM, NC_ISATT help.

* July 19 2012 John Evans <john.g.evans.ne@gmail.com> -r4000
- Added USE_NETCDF_JAVA preference to allow forced use of netcdf-java 
- instead of tmw for opendap reads.

* May 28 2012 John Evans <john.g.evans.ne@gmail.com> -r3998
- Fixed testing issue with GRIB setup.

* April 19 2012 John Evans <john.g.evans.ne@gmail.com> -r3996
- Added THREDDS_INFO, THREDDS_DUMP in examples folder
- Added NC_ISDIM (thanks to Gerben de Boer)
