@@ -12,16 +12,22 @@ fprintf('OK\n');
 function run_motherlode_test (  )
     
 % This catalog should have 3 top-level sub-catalogs.
-url = 'http://tashtego.marine.rutgers.edu:8080/thredds/roms/latte/catalog.xml';
+url = 'http://thredds.ucar.edu/thredds/catalog/subsetService/testdata/catalog.xml';
 info = thredds_info(url);
-if ~strcmp(info.name, 'ROMS LaTTE')
-    error('failed');
-end
-if numel(info.dataset) ~= 3
-    error('failed');
-end
-if ~strcmp(info.URL,url)
-    error('failed');
+
+expstruct = struct('name', '', 'dataset', [], ...
+    'URL', 'http://thredds.ucar.edu/thredds/catalog/subsetService/testdata/catalog.xml');
+expstruct.dataset = struct('name', 'NCSS Test Data', ...
+    'dataset', []);
+expstruct.dataset.dataset = struct('name', 'NCSS Test Data/dist2coast_1deg_ocean.nc', ...
+    'service', [], ...
+    'time_coverage', []);
+expstruct.dataset.dataset.service = struct('NetcdfSubset', ...
+    'http://thredds.ucar.edu/thredds/ncss/grid/subsetService/testdata/dist2coast_1deg_ocean.nc');
+expstruct.dataset.dataset.time_coverage = struct('start', [], 'stop', []);    
+
+if ~isequal(info, expstruct)
+    error('failed')
 end
 return
 
